--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -1,8 +1,8 @@
 .jumbotron
 {
 /*	background-image: url('/images/Turtle.jpg'); */
-	background-color: #697184; 
-	color:#black;	
+	background-color: #353C3F; 
+	color:#D5D6D2;	
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
 	/* box-shadow: 2px 2px 2px black; */
@@ -20,7 +20,7 @@
 }
 
 .main
-	background-color:#413F3D;
+	background-color:#353C3F;
 }
 
 body{
@@ -28,10 +28,11 @@ body{
 }
 
 .card{
-	background-color:#D8CFD0;
-	color: #black;
+	background-color:#756867;
+	color: #D5D6D2;
+	text-align:left;
 	margin:1rem 1rem 5rem 1rem;
-	border-radius:3px 3px 3px 3px; 
+	border-radius:8px 8px 8px 8px; 
 	box-shadow: 1px 1px 3px black inset;
 }
 
@@ -42,25 +43,26 @@ body{
 .card-header, .card-header:first-child{		
 	padding-top:2rem;
 	padding-bottom:2rem;
-	color:#D8CFD0;
+	color:black;
 	text-align:center;
-	background-color:#697184;
-	border-radius:2px 2px 0 0;
+	background-color:#FF8D3F;
+	border-radius:5px 5px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
 /*	box-shadow:2px 5px 5px black outset; */
 }
 
 }
 .card-body{
+	text-align:left;
 }
 
 .main-body {
-	margin-top:8rem;
+	margin-top:0rem;
 	margin-bottom:8rem;
 	padding-bottom:10rem;
 	padding-top:8rem;
 	text-align:center;
-	background-color:#413F3D;
+	background-color:#353C3F; 
 /*	background-color:#413F3D; */
 	padding-left:0rem;
 
@@ -68,3 +70,14 @@ body{
 h5 {
 	font-weight:bold;
 }
+.page-footer{
+	background-color:#353C3F;
+	color:#D5D6D2;
+}
+a{
+	color:black;
+	font-weight:bold;
+}
+a:link{}
+a:active{color:black;}
+a:hover{color:#FF8D3F}
