--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -1,18 +1,19 @@
 .jumbotron
 {
 /*	background-image: url('/images/Turtle.jpg'); */
+	font-family:Comic Sans MS;
 	background-color: #353C3F; 
-	color:#D5D6D2;	
+	color:#D8CFD0;	
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
 	/* box-shadow: 2px 2px 2px black; */
 	padding: 5rem 5rem 0rem 5rem;
-	margin-bottom:8rem;
+	margin-bottom:10rem;
 }
 
 .jumbotron .lead .p{
 	color:black;
-	
+	font-family:Comic Sans MS;
 }
 
 .lead {
@@ -27,51 +28,60 @@
 	background-color:#353C3F;
 }
 
+
 body{
-	background-color:#D5D6D2;
+/*	background-color:#B1A6A4; */
 	 /* background-image: linear-gradient(to top, #222629 , #e6e6e6); */
 }
-
 .card{
-	background-color:#756867;
-	color: #D5D6D2;
+	font-family:Comic Sans MS;
+	background-color:#353C3F;
+	color:#D8CFD0;
 	text-align:left;
-	margin:1rem 1rem 5rem 1rem;
-	border-radius:8px 8px 8px 8px; 
+	padding:0.5rem;
+	margin:1rem 0rem 5rem 0rem;
+/*	border-radius:1px 1px 1px 1px; 
 	box-shadow: 1px 1px 3px black inset;
+*/
 }
 
+.card-text{
+	font-family: Comic Sans MS;
+}
 .card-title{
-	border-radius:20px; 
-	font-size:24px;
+	border-radius:0px; 
+	font-size:2px;
 }	
 .card-header, .card-header:first-child{		
 	padding-top:2rem;
 	padding-bottom:2rem;
-	color:black;
+	color:#D8CFD0;
 	text-align:center;
-	background-color:#FF8D3F;
-	border-radius:5px 5px 0 0;
+/*	background-color:#413F3D;
+	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
-/*	box-shadow:2px 5px 5px black outset; */
+	box-shadow:2px 5px 5px black outset; */
 }
 
-}
+
 .card-body{
-	text-align:left;
+	text-align:center;
+	margin: 3rem 0rem 3rem 0rem;
+	padding:1rem;
 }
 
 .main-body {
+	font-family: "Sofia", sans-serif;
 	margin-top:0rem;
 	margin-bottom:8rem;
 	padding-bottom:10rem;
 	padding-top:8rem;
 	text-align:center;
-	background-color:#353C3F; 
-/*	background-color:#413F3D; */
+/*	background-color:#353C3F; */
 	padding-left:0rem;
 
-}
+} 
+
 h5 {
 	font-weight:bold;
 }
