--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -64,7 +64,7 @@ box-shadow: 1px 2px 10px black inset;
 	color:red/*D8CFD0*/;
 	text-align:center;
 /*	background-color:#B9B6B5;*/
-	background-color:#FF8D3F;
+	background-color:#D5D6D2;
 /*	background-color:#413F3D;
 	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
