--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -2,8 +2,8 @@
 {
 /*	background-image: url('/images/Turtle.jpg'); */
 	font-family:Comic Sans MS;
-	background-color: #353C3F; 
-	color:grey;	
+	background-color: #A16E83; 
+	color:#B19F9E;	
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
 	/* box-shadow: 2px 2px 2px black; */
@@ -22,17 +22,17 @@
 
 .wrapper{
 /*	background-color:#D5D6D2; */
-	background-color:#353C3F;
+	background-color:#479761;
 /*E4E3E3;756867	*/
 }
 
 .main {
-	background-color:#353C3F;
+	background-color:#479761;
 }
 
 
 body{
-	background-color:#FF8D3F;
+/*	background-color:#FF8D3F; */
 
 /*#B1A6A4; 
 	 /* background-image: linear-gradient(to top, #222629 , #e6e6e6); */
@@ -40,7 +40,7 @@ body{
 .card{
 	font-family:Comic Sans MS;
 	background-color:#756867;
-	color:#D8CFD0;
+	color:#B19F9E;
 	text-align:left;
 	padding:0rem;
 	margin:1rem 0rem 5rem 0rem;
@@ -64,7 +64,7 @@ box-shadow: 1px 2px 10px black inset;
 	color:red/*D8CFD0*/;
 	text-align:center;
 /*	background-color:#B9B6B5;*/
-	background-color:#D5D6D2;
+	background-color:#B19F9E;
 /*	background-color:#413F3D;
 	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
@@ -91,7 +91,7 @@ box-shadow: 1px 2px 5px black inset;
 
 } 
 h1{
-	color:#FF8D3F;	
+	color:#B19F9E;	
 }
 h3{
 	color:black;
@@ -100,7 +100,7 @@ h5 {
 	font-weight:bold;
 }
 .page-footer{
-	background-color:#D5D6D2;
+	background-color:#B19F9E;
 	color:black;
 }
 a{
@@ -108,7 +108,7 @@ a{
 	font-weight:bold;
 }
 a:link{}
-a:active{color:black;}
+a:active{color:#000000;}
 a:hover{color:#FF8D3F}
 
 .accordion{
@@ -128,3 +128,52 @@ a:hover{color:#FF8D3F}
 .accordion-button{
 text-align: left;
 }
+/*
+COLOR SCHEMES
+
+CURRENT SCHEME
+	ORANGE #FF8D3F
+	PALE BLAKE background-color: #353C3F; 
+	LIGHT GREY #D5D6D2
+	LESS-LIGHT GREY #D8CFD0
+	BROWN
+		background-color:#756867;
+			
+SCHEME 1
+	Website color scheme #28: Muted and minimal
+	DUSTY #96858F
+	LAVENDAR #6D7993
+	OVERCAST #9099A2
+	PAPER #D5D5D5
+
+SCHEME 2
+	Website color scheme #23: Antique and clean
+	RUST #B56357
+	MINT #B4DBC0
+	SLATE #EAE3EA
+	SEA FOAM #A7B3A5
+
+SCHEME 3
+Audacious and Vibrant
+RED: #4C4445
+AQUA: #55BCC9
+BLUE-PURPLE: 97CAEF
+LIGHT BLUE: #CAFAFE
+
+SCHEME 5
+Stylish and Sophisticated
+DARK GREY: #5D5C61
+GREY: #379683
+BLUE: #7395AE
+DARKER BLUE: #557A95
+BROWN: B1A296
+
+SCHEME 6
+Modern and Minimalist
+BLACK: #19181A
+GREEN: #479761
+PALE YELLOW: CEBC81
+ROSE: A16E83
+GREY: #B19F9E
+
+*/
