--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -4,8 +4,8 @@
 /*	background-color:#D5D6D2; 
  	style="border-radius:0px;border-top:3px solid #D5D6D2;padding-bottom:5rem;*/
 	font-family:Comic Sans MS;
-	background-color: #A16E83; 
-	color:#B19F9E;	
+	background-color: #B19F9E; 
+	color:#19181A;	
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
 	padding: 2rem 2rem 0rem 1rem;
