--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -1,6 +1,5 @@
 .jumbotron
 {
-
 /*	background-color:#D5D6D2; 
  	style="border-radius:0px;border-top:3px solid #D5D6D2;padding-bottom:5rem;*/
 	font-family:Comic Sans MS;
@@ -25,12 +24,12 @@
 /*	background-color:#D5D6D2; 
 jumbo
  style="border-radius:0px;border-top:3px solid #D5D6D2;padding-bottom:5rem;*/
-	background-color:#479761;
+	background-color:#19181A;
 /*E4E3E3;756867	*/
 }
 
 .main {
-	background-color:#479761;
+	background-color:#19181A;
 }
 
 
@@ -43,7 +42,7 @@ body{
 .card{
 	font-family:Comic Sans MS;
 	background-color:#756867;
-	color:#B19F9E;
+	color:#A16E83;
 	text-align:left;
 	padding:0rem;
 	margin:1rem 0rem 5rem 0rem;
@@ -67,7 +66,7 @@ box-shadow: 1px 2px 10px black inset;
 	color:red/*D8CFD0*/;
 	text-align:center;
 /*	background-color:#B9B6B5;*/
-	background-color:#B19F9E;
+	background-color:#CEBC81;
 /*	background-color:#413F3D;
 	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
@@ -176,7 +175,7 @@ Modern and Minimalist
 BLACK: #19181A
 GREEN: #479761
 PALE YELLOW: CEBC81
-ROSE: A16E83
+ROSE: #A16E83
 GREY: #B19F9E
 
 */
