--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -41,8 +41,8 @@ body{
 }
 .card{
 	font-family:Comic Sans MS;
-	background-color:#756867;
-	color:#A16E83;
+	background-color:#A16E83;
+	color:#19181A;
 	text-align:left;
 	padding:0rem;
 	margin:1rem 0rem 5rem 0rem;
