--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -3,7 +3,7 @@
 /*	background-color:#D5D6D2; 
  	style="border-radius:0px;border-top:3px solid #D5D6D2;padding-bottom:5rem;*/
 	font-family:Comic Sans MS;
-	background-color: #B19F9E; 
+	background-color: #A16E83; 
 	color:#19181A;	
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
@@ -66,7 +66,7 @@ box-shadow: 1px 2px 10px black inset;
 	color:red/*D8CFD0*/;
 	text-align:center;
 /*	background-color:#B9B6B5;*/
-	background-color:#CEBC81;
+	background-color:#B19F9E;
 /*	background-color:#413F3D;
 	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
