--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -14,6 +14,7 @@
 	text-align:center;
 	padding: 5rem 5rem 0rem 1rem;
 	margin-bottom:1rem;
+	border-top:3px solid #D5D6D2;
 }
 
 .jumbotron .lead .p{
