--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -13,8 +13,8 @@
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
 	padding: 5rem 5rem 0rem 1rem;
-	margin-bottom:1rem;
-	border-top:3px solid #D5D6D2;
+	margin-bottom:3rem;
+	border-top:3px solid #CEBC81;
 }
 
 .jumbotron .lead .p{
