--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -1,6 +1,7 @@
 .navbar{
 	background-color:#479761;
 	color:#19181A;	
+	margin-bottom:3rem;
 }
 
 .jumbotron
@@ -13,8 +14,8 @@
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
 	padding: 5rem 5rem 0rem 1rem;
-	margin-bottom:3rem;
 	border-top:3px solid #CEBC81;
+	border-bottom:3px solid #CEBC81;
 }
 
 .jumbotron .lead .p{
