--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -78,7 +78,8 @@ box-shadow: 1px 2px 10px black inset;
 	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
 	box-shadow:2px 5px 5px black outset; */
-box-shadow: 1px 2px 5px black inset;
+	border-top:3px solid #CEBC81;
+	box-shadow: 1px 2px 5px black inset;
 }
 
 
