--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -73,7 +73,7 @@ box-shadow: 1px 2px 10px black inset;
 	color:red/*D8CFD0*/;
 	text-align:center;
 /*	background-color:#B9B6B5;*/
-	background-color:#B19F9E;
+	background-color:#479761;
 /*	background-color:#413F3D;
 	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
