--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -117,6 +117,10 @@ a{
 	color:#19181A;
 	font-weight:bold;
 }
+hr{
+	border-bottom:3px solid #CEBC81;
+}
+
 a:link{}
 a:active{color:#000000;}
 a:hover{color:#FF8D3F}
@@ -185,5 +189,5 @@ GREEN: #479761
 PALE YELLOW: CEBC81
 ROSE: #A16E83
 GREY: #B19F9E
-
+style="background-color:#FF8D3F;margin: 1rem 5rem 1rem 5rem;"
 */
