--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -13,7 +13,7 @@
 	color:#19181A;	
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
-	padding: 5rem 0rem 5rem 0rem;
+	padding: 5rem;
 	border-top:3px solid #CEBC81;
 	border-bottom:3px solid #CEBC81;
 }
