--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -70,7 +70,7 @@ box-shadow: 1px 2px 10px black inset;
 	padding-top:2rem;
 	margin:0rem;
 	padding-bottom:2rem;
-	color:red/*D8CFD0*/;
+	color:#19181A/*D8CFD0*/;
 	text-align:center;
 /*	background-color:#B9B6B5;*/
 	background-color:#479761;
