--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -71,6 +71,7 @@ box-shadow: 1px 2px 10px black inset;
 	margin:0rem;
 	padding-bottom:2rem;
 	color:#19181A/*D8CFD0*/;
+	font-weight:bold;
 	text-align:center;
 /*	background-color:#B9B6B5;*/
 	background-color:#479761;
@@ -78,7 +79,7 @@ box-shadow: 1px 2px 10px black inset;
 	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
 	box-shadow:2px 5px 5px black outset; */
-	border-bottom:3px solid #CEBC81;
+	border-bottom:8px solid #CEBC81;
 	box-shadow: 1px 2px 5px black inset;
 }
 
