--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -104,8 +104,9 @@ box-shadow: 1px 2px 10px black inset;
 h1{
 	color:#19181A;	
 }
-h3{
+h2{
 	color:#19181A;	
+	font-weight:bold;
 }
 h3{
 	color:#19181A;	
