--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -2,7 +2,7 @@
 	background-color:#479761;
 	color:#19181A;	
 	padding:2rem 0rem 2rem 0rem;
-	border-top:5px solid #CEBC81;
+	border-top:5px solid #19181A;
 }
 
 .jumbotron
@@ -15,7 +15,7 @@
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
 	padding: 2rem;
-	border-top:5px solid #CEBC81;
+	border-top:5px solid #19181A;
 	border-bottom:5px solid #CEBC81;
 }
 
