adding back original Jumbo Brown

--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -10,7 +10,7 @@
 /*	background-color:#D5D6D2; 
  	style="border-radius:0px;border-top:3px solid #D5D6D2;padding-bottom:5rem;*/
 	font-family:Comic Sans MS;
-	background-color: #A16E83; 
+	background-color: #756867; 
 	color:#19181A;	
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
@@ -152,7 +152,7 @@ text-align: left;
 /*
 COLOR SCHEMES
 
-CURRENT SCHEME
+OG SCHEME
 	ORANGE #FF8D3F
 	PALE BLAKE background-color: #353C3F; 
 	LIGHT GREY #D5D6D2
