--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -34,12 +34,12 @@
 /*	background-color:#D5D6D2; 
 jumbo
  style="border-radius:0px;border-top:3px solid #D5D6D2;padding-bottom:5rem;*/
-	background-color:#19181A;
+	background-color:#353C3F;
 /*E4E3E3;756867	*/
 }
 
 .main {
-	background-color:#19181A;
+	background-color:#353C3F;
 }
 
 
