adding back original Jumbo Brown1

--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -17,8 +17,8 @@
 	padding: 2rem;
 	border-top:5px solid #A16E83;
 	border-bottom:5px solid #A16E83;
-	box-shadow: 1px 1px 3px black inset;
-
+/*	box-shadow: 1px 1px 3px black inset;
+*/
 }
 
 .jumbotron .lead .p{
