adding back original Jumbo Brown1

--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -117,6 +117,8 @@ h5 {
 	font-weight:bold;
 }
 .page-footer{
+	padding-top:3rem;
+	padding-bottom:3rem;
 	background-color:#B19F9E;
 	color:#19181A;
 }
