--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -109,7 +109,6 @@ h1{
 h2{
 	color:#19181A;	
 	font-weight:bold;
-	text-decoration: none;
 }
 h3{
 	color:#19181A;	
@@ -117,6 +116,13 @@ h3{
 h5 {
 	font-weight:bold;
 }
+a:link { text-decoration: none; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; }
+
+
+
 .page-footer{
 	padding-top:3rem;
 	padding-bottom:3rem;
