--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -34,12 +34,12 @@
 /*	background-color:#D5D6D2; 
 jumbo
  style="border-radius:0px;border-top:3px solid #D5D6D2;padding-bottom:5rem;*/
-	background-color:#353C3F;
+	background-color:#19181A;
 /*E4E3E3;756867	*/
 }
 
 .main {
-	background-color:#353C3F;
+	background-color:#19181A;
 }
 
 
@@ -120,9 +120,10 @@ a:link { text-decoration: none; }
 a:visited { text-decoration: none; }
 a:hover { text-decoration: none; }
 a:active { text-decoration: none; }
-
-
-
+a{
+	color:#19181A;
+	font-weight:bold;
+}
 .page-footer{
 	padding-top:3rem;
 	padding-bottom:3rem;
@@ -131,10 +132,7 @@ a:active { text-decoration: none; }
 	border-top:5px solid #A16E83;
 }
 
-a{
-	color:#19181A;
-	font-weight:bold;
-}
+
 hr{
 	border-bottom:3px solid #A16E83;
 }
