final commit of night, back to darker black wrapper222

--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -43,15 +43,9 @@ jumbo
 }
 
 
-body{
-/*	background-color:#FF8D3F; */
-
-/*#B1A6A4; 
-	 /* background-image: linear-gradient(to top, #222629 , #e6e6e6); */
-}
 .card{
 	font-family:Comic Sans MS;
-	background-color:#97CAEF;
+	background-color:#B19F9E;
 	color:#19181A;
 	text-align:left;
 	padding:0rem;
