--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -10,7 +10,7 @@
 /*	background-color:#D5D6D2; 
  	style="border-radius:0px;border-top:3px solid #D5D6D2;padding-bottom:5rem;*/
 	font-family:Comic Sans MS;
-	background-color: #B73225; 
+	background-color: #D8CFD0; 
 	color:#19181A;	
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
