final commit of night, back to darker black wrapper222222

--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -45,7 +45,7 @@ jumbo
 
 .card{
 	font-family:Comic Sans MS;
-	background-color:#B19F9E;
+	background-color:#D8CFD0;
 	color:#19181A;
 	text-align:left;
 	padding:0rem;
