--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -2,7 +2,7 @@
 	background-color:#479761;
 	color:#19181A;	
 	padding:2rem 0rem 2rem 0rem;
-	border-top:5px solid #A16E83;
+	border-top:5px solid #B73225;
 }
 
 .jumbotron
@@ -15,8 +15,8 @@
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
 	padding: 2rem;
-	border-top:5px solid #A16E83;
-	border-bottom:5px solid #A16E83;
+	border-top:5px solid #B73225;
+	border-bottom:5px solid #B73225;
 /*	box-shadow: 1px 1px 3px black inset;
 */
 }
@@ -74,9 +74,9 @@ box-shadow: 1px 2px 10px black inset;
 /*	background-color:#413F3D;
 	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
-	box-shadow:2px 5px 5px black outset; */
-	border-bottom:3px solid #CEBC81;
-	box-shadow: 1px 2px 5px black inset;
+	box-shadow:2px 5px 5px black outset; 
+	border-bottom:3px solid #CEBC81; */
+	box-shadow: 1px 2px 2px black inset;
 }
 
 
@@ -93,7 +93,7 @@ box-shadow: 1px 2px 10px black inset;
 	padding-bottom:10rem;
 	padding-top:8rem;
 	text-align:center;
-/*	background-color:#353C3F; */
+	background-color:#19181A;
 	padding-left:0rem;
 
 } 
