--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -2,7 +2,8 @@
 	background-color:#479761;
 	color:#19181A;	
 	padding:2rem 0rem 2rem 0rem;
-	border-top:5px solid #B73225;
+/*	border-top:5px solid #B73225; 
+*/
 }
 
 .jumbotron
@@ -15,9 +16,9 @@
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
 	padding: 2rem;
-	border-top:5px solid #B73225;
+/*	border-top:5px solid #B73225;
 	border-bottom:5px solid #B73225;
-/*	box-shadow: 1px 1px 3px black inset;
+	box-shadow: 1px 1px 3px black inset;
 */
 }
 
@@ -75,8 +76,9 @@ box-shadow: 1px 2px 10px black inset;
 	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
 	box-shadow:2px 5px 5px black outset; 
-	border-bottom:3px solid #CEBC81; */
+	border-bottom:3px solid #CEBC81; 
 	box-shadow: 1px 2px 2px black inset;
+*/
 }
 
 
@@ -121,9 +123,8 @@ a{
 .page-footer{
 	padding-top:3rem;
 	padding-bottom:3rem;
-	background-color:#B19F9E;
+	background-color: #D8CFD0; 
 	color:#19181A;
-	border-top:5px solid #A16E83;
 }
 
 
