--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -1,5 +1,5 @@
 .navbar{
-	background-color:#479761;
+	background-color:#353C3F /*479761*/;
 	color:#19181A;	
 	padding:2rem 0rem 2rem 0rem;
 /*	border-top:5px solid #B73225; 
@@ -11,42 +11,42 @@
 /*	background-color:#D5D6D2; 
  	style="border-radius:0px;border-top:3px solid #D5D6D2;padding-bottom:5rem;*/
 	font-family:Comic Sans MS;
-	background-color: #D8CFD0; 
-	color:#19181A;	
+	background-color: #756867; 
+	color:#FF8D3F /*19181A*/;	
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
 	padding: 2rem;
-/*	border-top:5px solid #B73225;
+/*D8CFD0	border-top:5px solid #B73225;
 	border-bottom:5px solid #B73225;
 	box-shadow: 1px 1px 3px black inset;
 */
 }
 
 .jumbotron .lead .p{
-	color:black;
+	color:#FF8D3F;
 	font-family:Comic Sans MS;
 }
 
 .lead {
-    color:black;
+    color:#FF8D3F;
 }
 
 .wrapper{
 /*	background-color:#D5D6D2; 
 jumbo
  style="border-radius:0px;border-top:3px solid #D5D6D2;padding-bottom:5rem;*/
-	background-color:#19181A;
+	background-color:#353C3F /*19181A*/;
 /*E4E3E3;756867	*/
 }
 
 .main {
-	background-color:#19181A;
+	background-color:#353C3F;
 }
 
 
 .card{
 	font-family:Comic Sans MS;
-	background-color:#D8CFD0;
+	background-color:#D8CFD0 /*D5D6D2 D8CFD0*/;
 	color:#19181A;
 	text-align:left;
 	padding:0rem;
@@ -67,11 +67,11 @@ box-shadow: 1px 2px 10px black inset;
 .card-header, .card-header:first-child{		
 	padding-top:2rem;
 	padding-bottom:2rem;
-	color:#19181A/*D8CFD0*/;
+	color:#FF8D3F /*19181A/*D8CFD0*/;
 	font-weight:bold;
 	text-align:center;
 /*	background-color:#B9B6B5;*/
-	background-color:#479761;
+	background-color:#FF8D3F /*#479761*/;
 /*	background-color:#413F3D;
 	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
@@ -95,12 +95,12 @@ box-shadow: 1px 2px 10px black inset;
 	padding-bottom:10rem;
 	padding-top:8rem;
 	text-align:center;
-	background-color:#19181A;
+	background-color:#353C3F;
 	padding-left:0rem;
 
 } 
 h1{
-	color:#19181A;	
+	color:#FF8D3F;	
 }
 h2{
 	color:#19181A;	
