--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -1,6 +1,6 @@
 .navbar{
 	background-color:#353C3F /*479761*/;
-	color:#19181A;	
+	color:#D8CFD0;	
 	padding:2rem 0rem 2rem 0rem;
 /*	border-top:5px solid #B73225; 
 */
@@ -12,7 +12,7 @@
  	style="border-radius:0px;border-top:3px solid #D5D6D2;padding-bottom:5rem;*/
 	font-family:Comic Sans MS;
 	background-color: #756867; 
-	color:#FF8D3F /*19181A*/;	
+	color:#D8CFD0 /*19181A*/;	
 	border-radius:0px 0px 0px 0px;
 	text-align:center;
 	padding: 2rem;
@@ -23,12 +23,12 @@
 }
 
 .jumbotron .lead .p{
-	color:#FF8D3F;
+	color:#D8CFD0;
 	font-family:Comic Sans MS;
 }
 
 .lead {
-    color:#FF8D3F;
+    color:#D8CFD0;
 }
 
 .wrapper{
@@ -100,7 +100,7 @@ box-shadow: 1px 2px 10px black inset;
 
 } 
 h1{
-	color:#FF8D3F;	
+	color:#D8CFD0;	
 }
 h2{
 	color:#19181A;	
