--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -46,8 +46,8 @@ jumbo
 
 .card{
 	font-family:Comic Sans MS;
-	background-color:#D8CFD0 /*D5D6D2 D8CFD0*/;
-	color:#19181A;
+	background-color:#756867 /*D5D6D2 D8CFD0*/;
+	color:#D8CFD0;
 	text-align:left;
 	padding:0rem;
 	margin:1rem 0rem 3rem;
@@ -67,11 +67,11 @@ box-shadow: 1px 2px 10px black inset;
 .card-header, .card-header:first-child{		
 	padding-top:2rem;
 	padding-bottom:2rem;
-	color:#FF8D3F /*19181A/*D8CFD0*/;
+	color:#19181A /*19181A/*D8CFD0*/;
 	font-weight:bold;
 	text-align:center;
 /*	background-color:#B9B6B5;*/
-	background-color:#FF8D3F /*#479761*/;
+	background-color:#D8CFD0 /*#479761*/;
 /*	background-color:#413F3D;
 	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
