--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -83,7 +83,7 @@ box-shadow: 1px 2px 10px black inset;
 
 
 .card-body{
-	text-align:center;
+	text-align:left;
 	margin: 3rem 0rem 3rem;
 	padding:0.5rem;
 }
