--- a/docroot/scripts/ben_styles.css
+++ b/docroot/scripts/ben_styles.css
@@ -64,14 +64,16 @@ box-shadow: 1px 2px 10px black inset;
 	border-radius:0px; 
 	font-size:2px;
 }	
+
 .card-header, .card-header:first-child{		
 	padding-top:2rem;
+	
 	padding-bottom:2rem;
-	color:#19181A /*19181A/*D8CFD0*/;
+	color:#D8CFD0 /*19181A/*D8CFD0*/;
 	font-weight:bold;
 	text-align:center;
 /*	background-color:#B9B6B5;*/
-	background-color:#D8CFD0 /*#479761*/;
+/*	background-color:#756867 /*D8CFD0 #479761*/;
 /*	background-color:#413F3D;
 	border-radius:1px 1px 0 0;
 	box-shadow: 3px 1px 1px #353C3F;
@@ -102,8 +104,9 @@ box-shadow: 1px 2px 10px black inset;
 h1{
 	color:#D8CFD0;	
 }
+
 h2{
-	color:#19181A;	
+	color:#D8CFD0;	
 	font-weight:bold;
 }
 h3{
@@ -114,10 +117,10 @@ h5 {
 }
 a:link { text-decoration: none; }
 a:visited { text-decoration: none; }
-a:hover { text-decoration: none; }
+a:hover { text-decoration: none;}
 a:active { text-decoration: none; }
 a{
-	color:#19181A;
+	color:#b9b9b9;
 	font-weight:bold;
 }
 .page-footer{
@@ -125,6 +128,11 @@ a{
 	padding-bottom:3rem;
 	background-color: #D8CFD0; 
 	color:#19181A;
+}
+
+.card-header:hover,h2:hover{
+	background-color:#635858;
+        color:white;
 }
 
 
